# api-omega

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
src/: main.py  settings.py
src/constants/: order_status.py  payment.py  province.py
src/database/: config.py
src/models/: __init__.py  admin.py  auth.py  base_response.py  cart.py  configuration.py  database.py  order.py  product.py  products.py  user.py
src/models/cart/: __init__.py  cart.py  cart_item.py
src/models/order/: __init__.py  address.py  order.py  order_item.py  payment.py  payment_method.py
src/models/product/: __init__.py  brand.py  category.py  image.py  product.py  promotion.py  tag.py
src/routers/: admin.py  auth.py  brand.py  cart.py  checkout.py  configuration.py  items.py  login.py  order.py  orders.py  products.py  tag.py  test.py  users.py
src/routers/order/: orders.py
src/routers/product/: brand.py  category.py  image.py  products.py  promotion.py  tag.py
src/schemas/: __init__.py  admin.py  auth.py  base.py  cart.py  order.py  product.py  user.py
src/schemas/products/: brand.py  category.py  image.py  product.py  promotion.py  tag.py
